# gobject-introspection

./: CMakeLists.txt  cmph.cmake  config.h.cmake  configure.ac  gir.cmake  girepository.cmake  giscanner.cmake  introspection.cmake  tools.cmake
cmake/: FindDBUS.cmake  FindFFI.cmake  FindGLIB.cmake
girepository/: ginvoke.c  girparser.c
giscanner/: annotationparser.py  ast.py  cachestore.py  dumper.py  gdumpparser.py  girparser.py  girwriter.py  giscannermodule.c  maintransformer.py  odict.py  scannerlexer.l  scannermain.py  sourcescanner.py  transformer.py  utils.py  xmlwriter.py
tools/: compiler.c  g-ir-scanner.in
